--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+	max-width: 1080px; 
+	margin: 0 auto !important; 
+	float: none !important; 
+
 }
 
 code {
